--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/contract": "^4.4.6",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
+    "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2",
     "web3": "^1.6.1"
