--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/contract": "^4.4.6",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "moment": "^2.29.1",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
+    "truffle-hdwallet-provider": "^1.0.17",
     "uuid": "^8.3.2",
     "web3": "^1.6.1"
   }
